# CoreToolkit

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile.build  README.md  conanfile.py
.github/scripts/: build_plugin_bundle.py
.github/workflows/: build-plugin-binary.yml  build-plugin-oci.yml  clone-and-build.yml
cmake/: VoltPlugin.cmake
dependencies/geogram/: Delaunay_psm.h
docker/: plugin-runtime.Dockerfile
include/opendxa/cli/: common.h
include/opendxa/utilities/: json_utils.h
include/volt/analysis/: cutoff_neighbor_finder.h  expression.hpp  nearest_neighbor_finder.h
include/volt/cli/: common.h
include/volt/core/: analysis_result.h  frame_adapter.h  lammps_parser.h  particle_property.h  property_base.h  simulation_cell.h  volt.h
include/volt/math/: affine_decomposition.h  affine_transformation.h  box3.h  lin_alg.h  matrix3.h  matrix4.h  plane.h  point2.h  point3.h  quaternion.h  ray.h  rotation.h  scaling.h  symmetric_tensor.h  vector2.h  vector3.h  vector4.h
include/volt/plugin/: analysis_plugin.h  option_binding.h  output_serializer.h  particle_id_mapper.h  plugin_entry.h  plugin_main.h
include/volt/structures/: cluster.h  crystal_structure_types.h  crystal_topology_registry.h  lattice_vectors.h
include/volt/utilities/: bounded_priority_queue.h  duckdb_parquet.h  json_utils.h  memory_pool.h  msgpack_atom_writer.h  parquet_atom_writer.h  parquet_bond_writer.h  parquet_line_writer.h
include/volt/utilities/concurrence/: parallel_system.h
scripts/: install-plugin.sh  install.sh  plugin-entrypoint.sh
src/analysis/: cutoff_neighbor_finder.cpp  expression.cpp  nearest_neighbor_finder.cpp
src/core/: frame_adapter.cpp  lammps_parser.cpp  particle_property.cpp  property_base.cpp
src/math/: affine_decomposition.cpp
src/structures/: crystal_topology_registry.cpp
src/utilities/: json_utils.cpp  parquet_atom_writer.cpp  parquet_bond_writer.cpp  parquet_line_writer.cpp
topologies/bcc/: bcc.poscar
topologies/diamond/: diamond.poscar
topologies/fcc/: fcc.poscar
topologies/hcp/: hcp.poscar
topologies/hex_diamond/: hex_diamond.poscar
topologies/sc/: sc.poscar
